          would not clear it visually in another.
        - fix an issue of urxvt not getting background pixmap updates
          and flickering after bg pixmap changes (reported by Mikachu).
	- fix redraw bug in xterm scrollbar with -sr (reported by Mikachu).
        - correctly provide dependencies for libev (µikachu).
        - minor code reorganisations and cleanups.

8.8  Sat Dec 15 19:40:39 CET 2007
        - option -C was aliased to all unsupported options, activating
          options that shouldn't be compiled in, leading to interesting
          effects.
        - updated libev, working around a bug in linux 2.4, curing the
          symptom of urxvt not closing its window on shell exit. also
          fixes a problem with urxvt not refreshing.
        - the text blink callback was called even when no blinking
          text was visible.
        - pre-8.4 slipwheeling behaviour has been reinstated, with
          some minor improvements.
        - streamlined x events processing to only flush once per
          display and not once per terminal window.
        - quite a bit of minor code cleanups and codesize optimisations.

8.7  Sun Nov 25 10:23:49 CET 2007
        - update libev with an important bugfix that would cause crashes
          when closing windows (when using rxvtd, and update is recommended).
        - do not compile in the block builtin graphics with --disable-frills.

8.6  Fri Nov 23 14:10:57 CET 2007
        - upgrade libev to disable kqueue on anything but netbsd as it
          seems to be broken everywhere else w.r.t. ptys.
        - allow for spurious event notifications, as at least epoll and
          especially solaris ports like to lie about them (symptoms:
          urxvt "hangs" until there is some x11 related activity).
        - -keysym command line options are now subjected to xlib parsing.
        - add 'xrm' option analogous to Xt one.

8.5a Wed Nov 21 10:16:33 CET 2007
	- make it compile with --disable-transparency.
