@@ -602,8 +602,10 @@ void rxvt_display::set_selection_owner (rxvt_term *owner)
 {
   if (selection_owner && selection_owner != owner)
     {
-      selection_owner->selection_clear ();
-      flush ();
+      rxvt_term *owner = selection_owner;
+
+      owner->selection_clear ();
+      owner->flush ();
     }
 
   selection_owner = owner;
